# pcpostprocess

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  copy_export_config  example_config.py  example_export_config.py  pyproject.toml  setup.py
.github/workflows/: pytest.yml  tests.yml
output-A01-02-03/: QC-13112023_MW2.csv  QC-13112023_MW2.json  pcpostprocess_info.txt  qc_table.tex  selected-13112023_MW2-staircaseramp_2.txt
output-A01-02-03/traces/: 13112023_MW2-staircaseramp-times.csv
output-A03/: QC-13112023_MW2.csv  QC-13112023_MW2.json  pcpostprocess_info.txt  qc_table.tex  qc_vals_df.csv  subtraction_qc.csv
output-A03-A20-D16/: QC-13112023_MW2.csv  QC-13112023_MW2.json  chrono.txt  pcpostprocess_info.txt  qc_table.tex
output-A03-A20-D16/traces/: 13112023_MW2-staircaseramp_2-voltages.csv
output-A03-A20-D16/traces/protocols/: 13112023_MW2-staircaseramp.json
output-A03/traces/protocols/: 13112023_MW2-staircaseramp.txt
output-all/: QC-13112023_MW2.csv  QC-13112023_MW2.json  passed_wells.txt  pcpostprocess_info.txt  qc_table.tex  qc_vals_df.csv  selected-13112023_MW2-staircaseramp.txt  selected-13112023_MW2-staircaseramp_2.txt  selected-13112023_MW2.txt  subtraction_qc.csv
output/run_herg_qc/: QC-13112023_MW2.csv  QC-13112023_MW2.json  pcpostprocess_info.txt  qc_table.tex  qc_table.xlsx  selected-13112023_MW2-staircaseramp.txt  selected-13112023_MW2-staircaseramp_2.txt  subtraction_qc.csv
pcpostprocess/: detect_ramp_bounds.py  directory_builder.py  hergQC.py  infer_reversal.py  leak_correct.py  subtraction_plots.py  trace.py  voltage_protocols.py
pcpostprocess/scripts/: __main__.py  export_staircase_data.py  run_herg_qc.py  summarise_herg_export.py
pcpostprocess/tests/: test_directory_builder.py  test_herg_qc.py  test_infer_reversal.py  test_leak_correct.py  test_scripts.py  test_subtraction_plots.py
scripts/: run_herg_qc.py  summarise_herg_export.py
summarise-all/summarise_herg_export/: attrition.tex  pcpostprocess_info.txt  qc_table.tex  spread_of_fitted_E_Kr.csv
tests/: __init__.py  test_directory_builder.py  test_herg_qc.py  test_infer_reversal.py  test_leak_correct.py  test_scripts.py  test_subtraction_plots.py
tests/test_data/: tr_after.pkl  tr_before.pkl
