[build-system]
requires = [
    'setuptools>=61',
    'wheel',
    'setuptools_scm[toml]>=8.0',
]

build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
local_scheme = 'dirty-tag'
write_to = 'pcpostprocess/_version.py'

[project]
requires-python = '>=3.10'
dynamic = ['version']
readme = { file = 'README.md', content-type = 'text/markdown' }

name = 'pcpostprocess'
description = 'Post-process patch clamp recordings with the staircase protocol'
authors = [
    {name='Frankie Patten-Elliot'},
    {name='Joseph Shuttleworth', email='joey.shuttleworth@nottingham.ac.uk'},
    {name='Chon Lok Lei'},
    {name='Michael Clerx'}
]

classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
]

dependencies = [
    'scipy>=1.7',
    'numpy>=1.21',
    'matplotlib>=3.4',
    'pandas>=1.3',
    'seaborn>=0.12.2',
    'jinja2>=3.1.0',
    'syncropatch_export @ git+https://github.com/CardiacModelling/syncropatch_export.git'
]

[project.optional-dependencies]
test = [
    'coverage',             # For coverage testing
    'codecov>=2.1.3',       # To upload coverage reports
    'flake8>=3',            # For code style checking
]

[tools.setuptools.package-data]
include_package_data = true

[project.urls]
Homepage = 'https://github.com/CardiacModelling/pcpostprocess'
Source = 'https://github.com/CardiacModelling/pcpostprocess'

[project.scripts]
pcpostprocess = 'pcpostprocess.scripts.__main__:main'

[tool.setuptools.packages.find]
include = [
    'pcpostprocess',
]

[tool.coverage.run]
source = [
    'pcpostprocess',
]
omit = [
    'pcpostprocess/__main__.py',
]

